--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -50,4 +50,51 @@
             }
         }
     }
+    .banner {
+        height: 250px;
+        position: relative;
+        color: variables.$color-white;
+        @media screen and (min-width: variables.$tablet-sm) {
+            height: 450px;
+        }
+        .dajak {
+            position: absolute;
+            background-color: rgba(130, 130, 130, 0.4);
+            padding: 7px;
+            text-align: center;
+            border-bottom: 1px solid #0b5071;
+            border-left: 1px solid #0b5071;
+            right: 0;
+            top: 0;
+            p {
+                margin: 0;
+
+            }
+            h1 {
+                font-size: 2.2rem;
+                margin: 0;
+                line-height: 2;
+                @media screen and (min-width: variables.$tableet-md) {
+                    font-size: 2.8rem;
+                }
+            }
+        }
+        .typed-text {
+            position: absolute;
+            left: 10px;
+            bottom: 15px;
+            h2 {
+                font-size: 1.2rem;
+                text-transform: uppercase;
+                font-weight: 300;
+                margin: 0;
+                @media screen and (min-width: variables.$tableet-md) {
+                    font-size: 1.8rem;
+                }
+                span {
+                    font-weight: 400;
+                }
+            }
+        }
+    }
 }
