--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -2,54 +2,6 @@
 @use '../sass/mixins';
 .header {
     background-color: variables.$color-light-blue;
-    
-    .container {
-        @include mixins.flex(row, space-between, center);
-        height: 62px;
-        .info {
-            @include mixins.flex(column, center, flex-start);
-            row-gap: 8px;
-            @media screen and (min-width: variables.$mobile-lg) {
-                flex-direction: row;
-            }
-            @media screen and (min-width: variables.$mobile-lg) {
-                row-gap: 0;
-                column-gap: 15px;
-            }
-            a {
-                @include mixins.flex(row, flex-start, center);
-                column-gap: 8px;
-                color: variables.$color-dark-blue;
-                transition: color 0.3s;
-                
-                &:hover {
-                    color: variables.$color-golden-yellow;
-                }
-            }
-        }
-        .social {
-            @include mixins.flex(row, flex-start, center);
-            column-gap: 8px;
-            a {
-                @include mixins.flex(row, center, center);
-                width: 42px;
-                height: 42px;
-                border-radius: 50%;
-                border: 1px solid variables.$color-dark-blue;
-                transition: background-color 0.6;
-                color: variables.$color-dark-blue;
-                svg {
-                    transition: transform 0.6s;
-                }
-                &:hover {
-                    background-color: variables.$color-golden-yellow;
-                    svg {
-                        transform: rotateY(360deg);
-                    }
-                }
-            }
-        }
-    }
     .banner {
         height: 250px;
         position: relative;
@@ -90,6 +42,20 @@
                     font-size: 2.8rem;
                 }
             }
+
+            @media screen and (max-width:variables.$tablet-sm) {
+                left: 0;
+                top: 0;
+                width: 42%;
+                font-size: 15px;
+            }
+            @media screen and (max-width:variables.$mobile-md){
+                width: 100%;
+                background-color: transparent;
+                border: none;
+                text-align: start;
+            }
+            
         }
         .typed-text {
             position: absolute;
@@ -102,6 +68,9 @@
                 margin: 0;
                 @media screen and (min-width: variables.$tableet-md) {
                     font-size: 1.8rem;
+                }
+                @media screen and (max-width: variables.$mobile-sm){
+                    font-size: 1rem;
                 }
                 span {
                     font-weight: 400;
