--- a/src/components/MainMenu.scss
+++ b/src/components/MainMenu.scss
@@ -3,7 +3,7 @@
 
 .menu {
     position: fixed;
-    top: 80px;
+    top: 125px;
     right: -100%;
     width: 100%;
     background-color: variables.$color-dark-blue;
@@ -12,7 +12,7 @@
     flex-direction: column;
     align-items: center;
     row-gap: 10px;
-    padding: 20px 0;
+    padding: 20px 15px 15px 0;
     &.active {
         right: 0;
     }
@@ -20,7 +20,10 @@
         position: static;
         @include mixins.flex(row, flex-end, center);
         background-color: variables.$color-transparent;
-        column-gap: 30px;
+        column-gap: 70px;
+    }
+    @media screen and (max-width: variables.$tablet-sm) {
+        top: 80px;
     }
     li {
         position: relative;
