--- a/src/index.scss
+++ b/src/index.scss
@@ -2,30 +2,31 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 body {
-  margin: 0;
-  font-family: 'Roboto', sans-serif;
-  padding-top: 80px;
-  color: variables.$color-dark-blue;
+	margin: 0;
+	font-family: 'Roboto', sans-serif;
+	padding-top: 125px;
+	color: variables.$color-dark-blue;
 }
 ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
+	list-style: none;
+	margin: 0;
+	padding: 0;
 }
 a {
-  text-decoration: none;
+	text-decoration: none;
 }
 img {
-  max-width: 100%;
+	max-width: 100%;
 }
-*, ::after, ::before {
-  box-sizing: border-box;
+*,
+::after,
+::before {
+	box-sizing: border-box;
 }
 .container {
-  padding: 0 15px;
-  @media screen and (min-width: variables.$desktop-lg) {
-    max-width: variables.$desktop-lg;
-    margin: 0 auto;
-  }
+	padding: 0 15px;
+	@media screen and (min-width: variables.$desktop-lg) {
+		max-width: variables.$desktop-lg;
+		margin: 0 auto;
+	}
 }
-
