--- a/src/pages/Singlegallery.scss
+++ b/src/pages/Singlegallery.scss
@@ -1,11 +1,14 @@
 @use '../sass/mixins';
 @use '../sass/variables';
 .single-gallery {
+	padding-top: 50px;
 	.images {
+		padding-top: 65px;
+		min-height: 60vh;
 		@include mixins.flex(column, space-between, center);
 		@media screen and (min-width: variables.$tableet-md) {
 			display: grid;
-			grid-template-columns: repeat(3, 32%);
+			grid-template-columns: repeat(3, 32.3%);
 			grid-auto-rows: 10px;
 			grid-auto-flow: dense;
 		}
