--- a/src/pages/RaftTeam.scss
+++ b/src/pages/RaftTeam.scss
@@ -3,12 +3,28 @@
 .raft-team {
 	padding: 45px 0;
 	.container {
+		h1{
+			width: 100%;
+			text-align: center;
+		}
 		@include mixins.flex(column, flex-start, stretch);
 		@media screen and (min-width: variables.$mobile-lg) {
 			@include mixins.flex(row, space-between, stretch);
 			flex-wrap: wrap;
 			column-gap: 20px;
 			row-gap: 20px;
+		}
+
+		.excerpt-post{
+			.btn-group{
+				
+				.btn{
+					background-color: variables.$color-light-blue;
+   					padding: 5px 15px;
+   					border-radius: 10px;
+					color: black;
+				}
+			}
 		}
 	}
 	.pagination {
