--- a/src/components/ExcerptPost.scss
+++ b/src/components/ExcerptPost.scss
@@ -1,6 +1,7 @@
 @use '../sass/mixins';
 @use  '../sass/variables';
 .excerpt-post {
+    margin: 40px 0;
     width: 100%;
     padding: 15px;
     border: 1px solid variables.$color-dark-blue;
