--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -6,6 +6,7 @@ footer {
     padding: 35px 0 0;
     .footer-top {
         @include mixins.flex(column, flex-start, flex-start);
+        padding: 0 15px;
         row-gap: 20px;
         border-bottom: 1px solid variables.$color-white;
             padding-bottom: 20px;
