--- a/src/pages/Novosti.scss
+++ b/src/pages/Novosti.scss
@@ -31,4 +31,27 @@
 			}
 		}
 	}
+
+	.pagination {
+		margin-top: 45px;
+		.pagination-container {
+			display: flex;
+			justify-content: center;
+			column-gap: 30px;
+			button {
+				font-size: 25px;
+				border: none;
+				background-color: transparent;
+				cursor: pointer;
+				@media screen and (max-width: variables.$mobile-md) {
+					font-size: 16px;
+				}
+				img {
+					@media screen and (max-width: variables.$mobile-md) {
+						height: 12px;
+					}
+				}
+			}
+		}
+	}
 }
