--- a/src/components/ExcerptPost.scss
+++ b/src/components/ExcerptPost.scss
@@ -3,20 +3,26 @@
 
 .excerpt-post {
     text-align: justify;
-    margin: 40px 0;
-    width: 100%;
-    padding: 15px;
+    margin: 13px 5px;
+    width: 96%;
+    padding: 10px;
     border: 1px solid variables.$color-dark-blue;
     border-radius: 15px;
 
     h3{
         text-align: center;
+        text-decoration: underline;
     }
+
+    img{ 
+        border-radius: 15px;
+    }
+
     @media screen and (min-width: variables.$mobile-lg) {
-        width: calc(50% - 10px);
+        width: calc(40% - 10px);
     }
     @media screen and (min-width: variables.$desktop-sm) {
-        width: calc(33.33% - 13.334px);
+        width: calc(30.33% - 13.334px);
     }
 
 }
