--- a/src/components/MainMenu.scss
+++ b/src/components/MainMenu.scss
@@ -13,6 +13,7 @@
     align-items: center;
     row-gap: 10px;
     padding: 20px 15px 15px 0;
+    height: 100vh;
     &.active {
         right: 0;
     }
