--- a/src/components/NavBar.scss
+++ b/src/components/NavBar.scss
@@ -11,7 +11,7 @@ nav {
     background-color: variables.$color-white;
     z-index: 1050;
     @media screen and (max-width: variables.$tablet-sm) {
-            height: 80px;
+            height: 90px;
     }
     .container {
         @include mixins.flex(row, space-between, center);
@@ -19,8 +19,8 @@ nav {
         .logo{
             padding-left: 10px;
             @media screen and (max-width: variables.$tablet-sm) {
-                padding-left: 5px;
-                width: 30%;
+                padding: 5px 0 0;
+                width: 50%;
             }
 
             img{
