--- a/src/pages/Contact.scss
+++ b/src/pages/Contact.scss
@@ -22,6 +22,11 @@
         border: 1px solid variables.$color-dark-blue;
         border-radius: 30px;
 
+        @media screen and (max-width: variables.$mobile-lg) {
+            width: 100%;
+            margin-top: 40px;
+        }
+
         li{
         width: 100%;
         margin-bottom: 20px;
@@ -54,6 +59,10 @@
         border: 1px solid black;
         border-radius: 30px;
 
+        @media screen and (max-width: variables.$mobile-lg) {
+            width: 100%;
+        }
+
         button[type=button]{
             width: 110px;
             height: 40px;
@@ -64,6 +73,10 @@
             border-radius: 8px;
             margin-top: 20px;
             cursor: pointer;
+
+            @media screen and (max-width: variables.$mobile-lg) {
+                margin-bottom: 10px;
+            }
         }
 
         button[type=button]:hover{
@@ -82,6 +95,9 @@
                 height: 20px;
                 height: 35px;
                 border-radius: 5px;
+                @media screen and (max-width: variables.$mobile-lg) {
+                    width: 95%;
+                }
             }
 
             input:focus{
@@ -91,6 +107,10 @@
             textarea{
                 border-radius: 5px;
                 border: 2px solid variables.$color-dark-blue;
+
+                @media screen and (max-width: variables.$tableet-md) {
+                    width: 90%;
+                }
             }
 
             textarea:focus{
@@ -104,5 +124,10 @@
         .forms:first-child{
             margin-top: 20px;
         }
+    }
+
+    @media screen and (max-width: variables.$mobile-lg) {
+        flex-direction: column-reverse;
+        padding: 0 10px;
     }
 }
