--- a/src/pages/DajakBoath.scss
+++ b/src/pages/DajakBoath.scss
@@ -1,39 +1,53 @@
+@use '../sass/variables';
+
 .post{
-    margin-top: 20px;
     text-align: justify;
     
 
-    .text-holder {
-        position: relative;
-        margin-top: 20px;
-        
-        h2{
-        position: absolute;
-        top: -100px;
-        left: 41%;
-        color: #fff;
-        text-decoration: underline;
-        }
-    }
+    .text-holder{
+        width: 100%;
     
 
-    p{
-        width: 100%;
-        padding: 5px 120px;
-        margin: 0;
+        p{       
+            @media screen and (max-width: variables.$tableet-md) {
+                width: 100%;
+                padding: 5px 20px;
+                margin: 0;
+            }
+            padding: 0 150px;    
+        }
+
+
+        h2{
+            font-size: 35px;
+            color: rgb(0, 0, 0);
+            text-decoration: underline;
+            text-align: center;
+            @media screen and (min-width: variables.$mobile-sm) {
+                margin: 0;
+                font-size: 22px;
+                padding: 15px;
+                
+            }
+        }
     }
 
+
     img{
-        width:100%
+        width: 100%;
+        @media screen and (max-width: variables.$mobile-lg) {
+            height: 90px;
+        }
     }
 
     .image-holder{
-        display: flex;
-        justify-content: space-evenly;
         margin: 30px 0;
+        display: flex;
+        justify-content: center;
+        width: 100%;
 
         img{
-            width:40%;
+            max-width:100%;
             border-radius: 15px;
         }
     }
