--- a/src/pages/Gallery.scss
+++ b/src/pages/Gallery.scss
@@ -2,6 +2,9 @@
 @use '../sass/variables';
 .gallery {
 	padding: 80px 0;
+	/* display: grid;
+	grid-template-columns: 1fr 1fr; */
+
 	.gallery-item {
 		padding: 0 15px;
 		.gallery-image-container {
@@ -11,4 +14,5 @@
 			}
 		}
 	}
+	
 }
