--- a/src/pages/Novosti.scss
+++ b/src/pages/Novosti.scss
@@ -13,7 +13,7 @@
 		}
 		@include mixins.flex(column, flex-start, stretch);
 		@media screen and (min-width: variables.$mobile-lg) {
-			@include mixins.flex(row, space-between, stretch);
+			@include mixins.flex(row, space-evenly, stretch);
 			flex-wrap: wrap;
 			column-gap: 20px;
 			row-gap: 20px;
