--- a/src/pages/RiverVrbas.scss
+++ b/src/pages/RiverVrbas.scss
@@ -1,28 +1,42 @@
-.vrbas{
-    margin-top: 20px;
+@use '../sass/variables';
+
+.post{
     text-align: justify;
 
     img{
         width: 100%;
-    }
-    .text-holder {
-        position: relative;
-        margin-top: 20px;
-        
-        h2{
-        position: absolute;
-        top: -75px;
-        left: 41%;
-        color: #fff;
-        text-decoration: underline;
+        @media screen and (max-width: variables.$mobile-lg) {
+            height: 90px;
         }
     }
 
-    p{
+    .text-holder{
         width: 100%;
-        padding: 5px 120px;
-        margin: 0;
+    
+
+        p{       
+            @media screen and (max-width: variables.$tableet-md) {
+                width: 100%;
+                padding: 5px 20px;
+                margin: 0;
+            }
+            padding: 0 150px;    
+        }
+
+        h2{
+            font-size: 35px;
+            color: rgb(0, 0, 0);
+            text-decoration: underline;
+            text-align: center;
+            @media screen and (min-width: variables.$mobile-sm) {
+                margin: 0;
+                font-size: 22px;
+                padding: 15px;
+                
+            }
+        }
     }
+
 
     .info{
         display: flex;
@@ -30,17 +44,27 @@
         flex-direction: column;
         text-align: justify;
         margin: 50px 0;
-
+        
         .item{
             display: flex;
             width: 100%;
             padding: 0 100px;
             justify-content: center;
+            @media screen and (max-width: variables.$tableet-md) {
+                padding: 0 75px;
+            }
+            @media screen and (max-width: variables.$tablet-sm) {
+                padding: 0 25px;
+            }
 
             p{
                 width: 30%;
                 padding: 10px 0;
                 border-bottom: 1px solid black;
+                @media screen and (max-width: variables.$tableet-md) {
+                    padding: 0;
+                    width: 95%;
+                }
             }
         }
     }
