--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -1,95 +1,93 @@
-@use '../sass/variables';
-@use '../sass/mixins';
+@use "../sass/variables";
+@use "../sass/mixins";
 
 footer {
-    color: variables.$color-white;  
-    padding: 35px 0 0;
-    .footer-top {
-        @include mixins.flex(column, flex-start, flex-start);
+  color: variables.$color-white;
+  padding: 100px 0 0;
+  .footer-top {
+    @include mixins.flex(column, flex-start, flex-start);
+    padding: 0 5px;
+    row-gap: 20px;
+    border-bottom: 1px solid variables.$color-white;
+    padding-bottom: 20px;
+
+    @media screen and (min-width: variables.$tablet-sm) {
+      padding: 20px 80px;
+    }
+    @media screen and (min-width: variables.$desktop-sm) {
+      flex-direction: row;
+      row-gap: 0;
+      column-gap: 15px;
+      padding: 10px;
+    }
+
+    .footer-top-item {
+      padding: 25px 0;
+      text-align: center;
+      width: 100%;
+      color: #fff;
+      border-radius: 20px;
+      background-color: variables.$color-dark-blue;
+      @media screen and (min-width: variables.$desktop-sm) {
+        width: calc(33.33% - 10px);
+        border: 1px solid black;
+        height: 240px;
+      }
+
+      @media screen and (min-width: variables.$mobile-sm) {
+        font-size: 15px;
+      }
+      &:first-child {
         padding: 0 5px;
-        row-gap: 20px;
-        border-bottom: 1px solid variables.$color-white;
-        padding-bottom: 20px;
-
-        @media screen and (min-width: variables.$tablet-sm) {
-            padding: 20px 80px;
+        h2 {
+          @include mixins.flex(column, flex-start, center);
+          row-gap: 15px;
+          @media screen and (min-width: variables.$desktop-sm) {
+            align-items: center;
+          }
         }
+        .social {
+          padding-top: 10px;
+          @include mixins.flex(row, center, center);
+          column-gap: 10px;
+          @media screen and (min-width: variables.$desktop-sm) {
+            justify-content: center;
+          }
+          a {
+            font-size: 25px;
+            color: variables.$color-white;
+            transition: color 0.3s;
+            &:hover {
+              color: variables.$color-golden-yellow;
+            }
+          }
+        }
+      }
+      ul {
+        @include mixins.flex(column, flex-start, center);
+        row-gap: 8px;
+
         @media screen and (min-width: variables.$desktop-sm) {
-            flex-direction: row;
-            row-gap: 0;
-            column-gap: 15px;
-            padding: 10px;
+          align-items: center;
         }
-        
 
-        .footer-top-item {
-            padding: 25px 0;
-            text-align: center;
-            width: 100%;
-            color: #fff;
-            border-radius: 20px;
-            background-color: variables.$color-dark-blue;
-            @media screen and (min-width: variables.$desktop-sm)  {
-                width: calc(33.33% - 10px);
-                border: 1px solid black;
-                height: 240px;               
-            }
-
-            @media screen and (min-width: variables.$mobile-sm){
-                font-size: 15px;
-            }
-            &:first-child {
-                padding: 0 5px;
-                h2 {
-                    @include mixins.flex(column, flex-start, center);
-                    row-gap: 15px;
-                    @media screen and (min-width: variables.$desktop-sm) {
-                        align-items: center;
-                    }
-                }
-                .social {
-                    padding-top: 10px;
-                    @include mixins.flex(row, center, center);
-                    column-gap: 10px;
-                    @media screen and (min-width: variables.$desktop-sm) {
-                        justify-content: center;
-                    } 
-                    a {
-                        font-size: 25px;
-                        color: variables.$color-white;
-                        transition: color 0.3s;
-                        &:hover {
-                            color: variables.$color-golden-yellow;
-                        }
-                    }
-                }
-            }
-            ul {
-
-                @include mixins.flex(column, flex-start, center);
-                row-gap: 8px;
-
-                @media screen and (min-width: variables.$desktop-sm) {
-                    align-items: center;
-                }
-              
-                a {
-                    color: variables.$color-white;
-                    transition: color .3s;
-                    &:hover {
-                        color: variables.$color-golden-yellow;
-                    }
-                }
-            }
+        a {
+          color: variables.$color-white;
+          transition: color 0.3s;
+          &:hover {
+            color: variables.$color-golden-yellow;
+          }
         }
+      }
     }
-    .footer-bottom {
-        @include mixins.flex(row, center, center);
-        padding: 10px 0;
-        background-color: variables.$color-dark-blue;
-        color: #fff;
-        p {
-            margin: 0;
-        }
+  }
+  .footer-bottom {
+    @include mixins.flex(row, center, center);
+    padding: 10px 0;
+    background-color: variables.$color-dark-blue;
+    color: #fff;
+    p {
+      margin: 0;
     }
+  }
 }
