--- a/src/components/ExcerptPost.scss
+++ b/src/components/ExcerptPost.scss
@@ -1,28 +1,27 @@
-@use '../sass/mixins';
-@use  '../sass/variables';
+@use "../sass/mixins";
+@use "../sass/variables";
 
 .excerpt-post {
-    text-align: justify;
-    margin: 13px 5px;
-    width: 96%;
-    padding: 10px;
-    border: 1px solid variables.$color-dark-blue;
+  text-align: justify;
+  width: 90%;
+  padding: 10px;
+  margin: 22px;
+  border: 1px solid variables.$color-dark-blue;
+  border-radius: 15px;
+
+  h3 {
+    text-align: center;
+    text-decoration: underline;
+  }
+
+  img {
     border-radius: 15px;
+  }
 
-    h3{
-        text-align: center;
-        text-decoration: underline;
-    }
-
-    img{ 
-        border-radius: 15px;
-    }
-
-    @media screen and (min-width: variables.$mobile-lg) {
-        width: calc(40% - 10px);
-    }
-    @media screen and (min-width: variables.$desktop-sm) {
-        width: calc(30.33% - 13.334px);
-    }
-
+  @media screen and (min-width: variables.$mobile-lg) {
+    width: calc(40% - 10px);
+  }
+  @media screen and (min-width: variables.$tableet-md) {
+    width: calc(30.33% - 13.334px);
+  }
 }
