--- a/src/pages/Gallery.scss
+++ b/src/pages/Gallery.scss
@@ -1,18 +1,37 @@
-@use '../sass/mixins';
-@use '../sass/variables';
+@use "../sass/mixins";
+@use "../sass/variables";
 .gallery {
-	padding: 80px 0;
-	/* display: grid;
-	grid-template-columns: 1fr 1fr; */
+  padding: 40px 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  text-align: center;
 
-	.gallery-item {
-		padding: 0 15px;
-		.gallery-image-container {
-			width: 100%;
-			@media screen and (min-width: variables.$tablet-lg) {
-				display: flex;
-			}
-		}
-	}
-	
+  @media screen and(max-width: variables.$desktop-sm) {
+    grid-template-columns: 1fr;
+  }
+
+  .gallery-item {
+    padding: 20px 15px;
+
+    .image-container {
+      img {
+        height: 400px;
+        border-radius: 10px;
+        @media screen and(max-width:variables.$desktop-sm) {
+          width: 600px;
+        }
+        @media screen and(max-width:variables.$mobile-lg) {
+          max-width: 100%;
+          height: 100%;
+        }
+      }
+    }
+  }
+
+  .loader {
+    top: 220px;
+    @media screen and (max-width: 500px) {
+      top: 190px;
+    }
+  }
 }
